# Watchdog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.sample.cfg
src/: AppWatcher.cpp  AppWatcher.h  Config.h  Context.cpp  Context.h  NoGui.cpp  NoGui.h  main.cpp  utils.cpp  utils.h
src/gtk/: GtkGui.cpp  GtkGui.h
